# github-assessment

./: .gitignore  Makefile  README.md  get-unique-users.sh  group_by_name.sh  pyproject.toml  requirements.txt  ruff.toml
scripts/: get-unique-users.sh  group-by-name.sh
src/github_access/: __init__.py  access.py  cli.py
